preparação para testes de integraçao com o banco In-Memory HSQLDB

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,15 +4,8 @@
 spring.main.web-application-type=NONE
 
 # mssql
-mssql.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-mssql.url=jdbc:sqlserver://localhost;databaseName=proc_runner
+mssql.driverClassName=org.hsqldb.jdbc.JDBCDriver
+mssql.url=jdbc:hsqldb:mem:testDB
 mssql.username=sa
-mssql.password=!234Abcd
+mssql.password=sa
 mssql.timeout=600
-
-# saphana
-saphana.driverClassName=com.sap.db.jdbc.Driver
-saphana.url=jdbc:sap://192.168.56.101:39015
-saphana.username=SYSTEM
-saphana.password=!234Abcd
-saphana.timeout=600
